
V1.1.023 (ZZ023)
* Bug fixes: floating blocks, tile tags, bridge gutters.
* Zombie volume adjustments in zztong_tfp_apartment_adobe_01.
* Added rwg_tile_rural_corner_zztong_03, rwg_tile_rural_corner_zztong_04.
* Slimmed down number of XS POIs on rwg_tile_rural_t_zztong_01
    and rwg_tile_rural_cap_zztong_01.
* Added zztong_cabin_01, zztong_cabin_02.

V1.0.022 (ZZ022)
* Converted to Version 1.0. (Shocking, I know, right?!)
* Bug fixes. Block changes. Texture changes. Door changes. More bug fixes.
* More POIs support Infested Quests.
* Added rwg_tile_downtown_intersection_zztong_02,
    rwg_tile_downtown_intersection_zztong_03, and
    rwg_tile_downtown_intersection_zztong_04.
* Added rwg_tile_commercial_cap_zztong_01, rwg_tile_commercial_t_zztong_01.
* Changes to rwgmixer.xml config to align with TFP direction and new features.
* Added zztong_tfp_house_old_spanish_01 for grins. (Yeh, it is modified.)

A21.2.021 (ZZ021)
* DuplicateRepeatDistances on Houses reduced to 1000 to combat empty lots.
* New Hidden Decorations and POIs thanks to ideas from the Rebirth community:
    buried_treasure_01 (Deco), buried_treasure_02 (POI)
* Retired the old, huge, ugly, wasteful Office_Bldg_03.
* Added a new Office_Bldg_03, lighter, nastier, nicer looking.
* Added watering_hole_01, watering_hole_02, house_22.
* Bug fixes to house_17, kzmb, brownstones, and warehouse_02.
* Removed AllowedBiome and AllowedTownship tags and various Biome tags.

A21.2.020 (ZZ020)
* Fixed installation instructions.
* Fixed biomes.xml issues with decorations.

A21.2.019 (ZZ019)
* Added rwg_tile_gateway_straight_zztong_08.
* Added rwg_tile_gateway_intersection_zztong_01.
* Added rwg_tile_gateway_intersection_zztong_02.
* Added rwg_tile_gateway_intersection_zztong_03.
* Added bartertown_bobx, bartertown_hughx, bartertown_jenx,
    bartertown_joelx, bartertown_rektx.
* Added pump_substation_01, solar_farm_02.
* Changed the DifficultyTier for all Tiles to 0 to assist modders.