@@ -164,6 +164,7 @@ zztong_restaurant_01,POI,POI,,x,Spicy Brains Restaurant,,,,,,,,,,,,,,
 zztong_restaurant_02,POI,POI,,x,Waffle House,,,,,,,,,,,,,,
 zztong_restaurant_03,POI,POI,,x,White Castle,,,,,,,,,,,,,,
 zztong_roadside_rest_01,POI,POI,,x,Roadside Rest,,,,,,,,,,,,,,
+zztong_rural_filler_01,POI,POI,,x,Wayward Refugees,,,,,,,,,,,,,,
 zztong_scout_lodge_01,POI,POI,,x,Nature Scout Lodge,,,,,,,,,,,,,,
 zztong_shelter_01,POI,POI,,x,Homeless Shelter,,,,,,,,,,,,,,
 zztong_sheriff_01,POI,POI,,x,County Sheriff,,,,,,,,,,,,,,
@@ -214,6 +215,7 @@ zztong_tfp_settlement_01,POI,POI,,x,Survivor Settlement,,,,,,,,,,,,,,
 zztong_tfp_skyscraper_02,POI,POI,,x,Beatrice Foods HQ,,,,,,,,,,,,,,
 zztong_trailer_01,POI,POI,,x,14 Fairview Drive,,,,,,,,,,,,,,
 zztong_trailer_02,POI,POI,,x,61 Argyle Drive,,,,,,,,,,,,,,
+zztong_trailer_03,POI,POI,,x,398 Copperhead Road,,,,,,,,,,,,,,
 zztong_trailer_park_01,POI,POI,,x,Happy Valley Trailer Park,,,,,,,,,,,,,,
 zztong_trailer_park_02,POI,POI,,x,Pleasant Hills Trailer Park,,,,,,,,,,,,,,
 zztong_trailer_park_03,POI,POI,,x,Verdant Meadows Trailer Park,,,,,,,,,,,,,,
