@@ -1,0 +1,70 @@
+﻿<?xml version="1.0" encoding="UTF-8"?>
+<prefab>
+  <property name="CopyAirBlocks" value="True" />
+  <property name="ExcludeDistantPOIMesh" value="False" />
+  <property name="ExcludePOICulling" value="False" />
+  <property name="DistantPOIYOffset" value="0" />
+  <property name="AllowTopSoilDecorations" value="False" />
+  <property name="DifficultyTier" value="0" />
+  <property name="ShowQuestClearCount" value="1" />
+  <property name="TraderArea" value="False" />
+  <property name="PrefabSize" value="25, 9, 25" />
+  <property name="RotationToFaceNorth" value="2" />
+  <property name="Zoning" value="none" />
+  <property class="Stats">
+    <property name="TotalVertices" value="74510" />
+    <property name="TotalTriangles" value="33610" />
+    <property class="BlockEntities">
+      <property name="Vertices" value="59038" />
+      <property name="Triangles" value="22174" />
+    </property>
+    <property class="ChunkMeshes0">
+      <property name="Vertices" value="13412" />
+      <property name="Triangles" value="8196" />
+    </property>
+    <property class="ChunkMeshes1">
+      <property name="Vertices" value="0" />
+      <property name="Triangles" value="0" />
+    </property>
+    <property class="ChunkMeshes2">
+      <property name="Vertices" value="288" />
+      <property name="Triangles" value="144" />
+    </property>
+    <property class="ChunkMeshes3">
+      <property name="Vertices" value="0" />
+      <property name="Triangles" value="0" />
+    </property>
+    <property class="ChunkMeshes4">
+      <property name="Vertices" value="0" />
+      <property name="Triangles" value="0" />
+    </property>
+    <property class="ChunkMeshes5">
+      <property name="Vertices" value="1772" />
+      <property name="Triangles" value="3096" />
+    </property>
+  </property>
+  <property class="IndexedBlockOffsets">
+    <property class="challenge_mech_parts">
+      <property name="0" value="21, 4, 5" />
+      <property name="1" value="13, 3, 4" />
+    </property>
+    <property class="TraderOnOff">
+      <property name="0" value="17, 4, 14" />
+      <property name="1" value="19, 4, 14" />
+      <property name="2" value="17, 4, 18" />
+      <property name="3" value="20, 4, 19" />
+      <property name="4" value="22, 4, 18" />
+    </property>
+    <property class="challenge_sinks">
+      <property name="0" value="21, 5, 13" />
+      <property name="1" value="22, 4, 15" />
+      <property name="2" value="22, 4, 21" />
+    </property>
+    <property class="POILight">
+      <property name="0" value="21, 6, 13" />
+      <property name="1" value="16, 6, 14" />
+      <property name="2" value="16, 6, 19" />
+      <property name="3" value="21, 6, 20" />
+    </property>
+  </property>
+</prefab>
