@@ -7,6 +7,8 @@ V1.1.023 (ZZ023)
 * Slimmed down number of XS POIs on rwg_tile_rural_t_zztong_01
     and rwg_tile_rural_cap_zztong_01.
 * Added zztong_cabin_01, zztong_cabin_02.
+* Added zztong_trailer_03.
+* Added zztong_rural_filler_01.
 
 V1.0.022 (ZZ022)
 * Converted to Version 1.0. (Shocking, I know, right?!)
